# turboquant-apple-silicon

./: .gitignore  Cargo.toml  README.md  build.rs  test_wrap  test_wrap.rs  tui_capture_1.txt  tui_capture_2.txt
docs/: 01-implementation-plan.md  02-task-log.md  03-final-walkthrough.md
include/: llamatqshim.h
scripts/: ci-smoke-test.sh
src/: chat.rs  context.rs  ffi.rs  main.rs  template.rs  tui.rs
src/shim/: llamatqshim.c
